expected/main/lc/longest-lexeme-literals3.err
ERROR: "actual/main/lc/longest-lexeme-literals3.llc", line 1
  much  = a67b43   -- lexer sees single identifier
          ^
"a67b43" is not in scope

ERROR: Aborting after previously reported error

